[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montecarlo_lib"
version = "0.1.0"
description = "Librería de simulación Montecarlo y muestreo avanzado (Taller 3)"
authors = [
    {name = "Thomas", email = "thomasggrisales@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "notebook"
]